# WoD-Replays

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: sync-version.mjs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
